# BreakoutOpenGL

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: game.cpp.74F140A2E739A6E9.idx  game.h.5C27FB286D9BF413.idx  glad.c.5F22CE59A1C390DA.idx  glad.h.415B74E12F082CB8.idx  khrplatform.h.3B5E538C68B69261.idx  main.cpp.1811A1058CA41831.idx  resource_manager.cpp.7FEB3A43D33F3DBB.idx  resource_manager.h.3B56E3C1AFB7223A.idx  shader.cpp.44F9D60E295E89AF.idx  shader.h.794A5D44C9AC461C.idx  sprite_renderer.cpp.8F9026F62D50FDB8.idx  sprite_renderer.h.7EA6E49ABCB467C7.idx  stb_image.h.9CED174ED416B87C.idx  texture.cpp.F2BC5CB1669888B2.idx  texture.h.9806D7DE2AC3CE89.idx  window.cpp.D59C68875822EB34.idx  window.h.BC4EACB55782786C.idx
assets/shaders/: particle.vs  post_processor.frag  post_processor.vs
include/: ball.h  game.h  gamelevel.h  gameobject.h  particle_generator.h  player.h  post_processor.h  powerup.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h  window.h
src/: ball.cpp  game.cpp  gamelevel.cpp  gameobject.cpp  main.cpp  particle_generator.cpp  player.cpp  post_processor.cpp  powerup.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp  window.cpp
